; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_rc_render.c_rndr_table.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_rc_render.c_rndr_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"table\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.buf*, %struct.buf*, %struct.buf*, i8*)* @rndr_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rndr_table(%struct.buf* %0, %struct.buf* %1, %struct.buf* %2, i8* %3) #0 {
  %5 = alloca %struct.buf*, align 8
  %6 = alloca %struct.buf*, align 8
  %7 = alloca %struct.buf*, align 8
  %8 = alloca i8*, align 8
  store %struct.buf* %0, %struct.buf** %5, align 8
  store %struct.buf* %1, %struct.buf** %6, align 8
  store %struct.buf* %2, %struct.buf** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.buf*, %struct.buf** %6, align 8
  %10 = call i32 @buf2str(%struct.buf* %9)
  %11 = load %struct.buf*, %struct.buf** %7, align 8
  %12 = call i32 @buf2str(%struct.buf* %11)
  %13 = call i32 @BLOCK_CALLBACK(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 2, i32 %10, i32 %12)
  ret void
}

declare dso_local i32 @BLOCK_CALLBACK(i8*, i32, i32, i32) #1

declare dso_local i32 @buf2str(%struct.buf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
